// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminInterface component should disabled button and render alert for form submitting 1`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View updated record",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Tabs))
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -40,
                "marginRight": -40,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(ForwardRef(Tab))
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
          </WithStyles(ForwardRef(Tabs))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={true}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <div
          style={
            Object {
              "height": 16,
            }
          }
        />
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Request is being processed."
          showLoader={true}
          title="Saving"
          type="info_outline"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              disabled={true}
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should display an alert if editing of a pubtype is not supported 1`] = `
<StandardPage>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Alert)
        message="Editing of record is not yet supported."
        type="info"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`AdminInterface component should display badges on tabs for erroring fields 1`] = `
Array [
  <WithStyles(Tab)
    key="bibliographic"
    label={
      <WithStyles(Badge)
        badgeContent={1}
        color="error"
      >
        Bibliographic
      </WithStyles(Badge)>
    }
    value="bibliographic"
  />,
  <WithStyles(Tab)
    key="security"
    label={
      <WithStyles(Badge)
        badgeContent={3}
        color="error"
      >
        Security
      </WithStyles(Badge)>
    }
    value="security"
  />,
]
`;

exports[`AdminInterface component should display successful alert 1`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View updated record",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Tabs))
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -40,
                "marginRight": -40,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(ForwardRef(Tab))
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
          </WithStyles(ForwardRef(Tabs))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <div
          style={
            Object {
              "height": 16,
            }
          }
        />
        <Alert
          allowDismiss={true}
          dismissTitle="Click to dismiss this alert"
          message="Work has been saved successfully"
          showLoader={false}
          title="Success"
          type="done"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should display successful alert 2`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View updated record",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Tabs))
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -40,
                "marginRight": -40,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(ForwardRef(Tab))
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
          </WithStyles(ForwardRef(Tabs))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <div
          style={
            Object {
              "height": 16,
            }
          }
        />
        <Alert
          allowDismiss={true}
          dismissTitle="Click to dismiss this alert"
          message="Work has been saved successfully"
          showLoader={false}
          title="Success"
          type="done"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render a title with html correctly 1`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View updated record",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - Cost analysis: outsourcing radiofrequency ablution for massiv
        <sub
          key="1"
        >
          e
        </sub>
         renal m
        <sup
          key="3"
        >
          a
        </sup>
        sses ™ ♦: UQ:123456
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      />
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={false}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={true}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render alert message for retracted records 1`] = `null`;

exports[`AdminInterface component should render default view as a full form view 1`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View updated record",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      />
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={false}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={true}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
      <TabContainer
        currentTab="bibliographic"
        key="files"
        tabbed={false}
        value="files"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Files"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="filesSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
      <TabContainer
        currentTab="bibliographic"
        key="security"
        tabbed={false}
        value="security"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Security"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="securitySection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render default view as a tabbed form view 1`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View updated record",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Tabs))
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -40,
                "marginRight": -40,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(ForwardRef(Tab))
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
            <WithStyles(ForwardRef(Tab))
              key="security"
              label="Security"
              value="security"
            />
          </WithStyles(ForwardRef(Tabs))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render in create mode 1`] = `
<StandardPage>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "View new record",
          "confirmButtonLabel": "Add another work",
          "confirmationMessage": "Your new record has been added to eSpace.",
          "confirmationTitle": "Work has been added",
        }
      }
      onAction={[Function]}
      onCancelAction={[Function]}
      onRef={[Function]}
      showAlternateActionButton={false}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(ForwardRef(Typography))
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Add a new Thesis
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Tabs))
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -40,
                "marginRight": -40,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(ForwardRef(Tab))
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
            <WithStyles(ForwardRef(Tab))
              key="files"
              label="Files"
              value="files"
            />
            <WithStyles(ForwardRef(Tab))
              key="security"
              label="Security"
              value="security"
            />
          </WithStyles(ForwardRef(Tabs))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <ScrollToSection
          scrollToSection={false}
        >
          <StandardCard
            primaryHeader={true}
            smallTitle={true}
            squareTop={true}
            title="Bibliographic"
          >
            <Field
              component={[Function]}
              disabled={false}
              name="bibliographicSection"
            />
          </StandardCard>
        </ScrollToSection>
      </TabContainer>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={1}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(ForwardRef(Button))
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render when no record is available 1`] = `
<div
  className="empty"
/>
`;
